# recursive-file-system-serializer

./: .gitignore  CMakeLists.txt  README.md  filesystem.hpp  test.cpp  valgrind.out
